--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-collapsible-component": "^1.1.2",
     "react-dom": "^16.8.6",
     "react-file-icon": "^0.2.0",
+    "react-radio-buttons": "^1.2.2",
     "react-scripts": "2.1.8"
   },
   "scripts": {
