--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
+    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-collapsible-component": "^1.1.2",
     "react-dom": "^16.8.6",
     "react-file-icon": "^0.2.0",
     "react-radio-buttons": "^1.2.2",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
