--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-file-icon": "^0.2.0",
+    "react-loader-spinner": "^2.3.0",
     "react-radio-buttons": "^1.2.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
