--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui-treeview": "^3.2.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-contexify": "^4.0.2",
     "react-dom": "^16.8.6",
     "react-file-icon": "^0.2.0",
     "react-loader-spinner": "^2.3.0",
